--- a/20 - Car Prices/first_steps.ipynb
+++ b/20 - Car Prices/first_steps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,19 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello mars!\n"
+      "Hello marss!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello mars!\")"
+    "print(\"Hello marss!\")"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "# Heading!!!\n",
     "\n",
-    "Hello **world**"
+    "Hello **world**\n"
    ]
   },
   {
@@ -93,9 +93,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (car-prices-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "car-prices-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
