--- a/20 - Car Prices/pandas3.ipynb
+++ b/20 - Car Prices/pandas3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4                           None reported         NaN  $34,999  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,6 +219,7 @@
     }
    ],
    "source": [
+    "# Here we got an integer. Here we got a series. And then this is getting intercepted by the series. This should be applied to all the entries in this series.\n",
     "age = df[\"model_year\"].max() - df[\"model_year\"]\n",
     "print(age)"
    ]
@@ -248,7 +249,7 @@
     }
    ],
    "source": [
-    "milage = df[\"milage\"]\n",
+    "milage = df['milage']\n",
     "milage = milage.str.replace(\",\", \"\")\n",
     "milage = milage.str.replace(\" mi.\", \"\")\n",
     "milage = milage.astype(int)\n",
@@ -265,9 +266,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (car-prices-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "car-prices-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -279,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
