--- a/20 - Car Prices/exercise.ipynb
+++ b/20 - Car Prices/exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4                           None reported         NaN  $34,999  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,22 +158,109 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"data/used_cars.csv\")\n",
+    "df = pd.read_csv('data/used_cars.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       At least 1 accident or damage reported\n",
+       "1       At least 1 accident or damage reported\n",
+       "2                                None reported\n",
+       "3                                None reported\n",
+       "4                                None reported\n",
+       "                         ...                  \n",
+       "4004                             None reported\n",
+       "4005                             None reported\n",
+       "4006                             None reported\n",
+       "4007                             None reported\n",
+       "4008    At least 1 accident or damage reported\n",
+       "Name: accident, Length: 4009, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "accident_free = df[\"accident\"] == \"None reported\""
+    "df['accident']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2        True\n",
+       "3        True\n",
+       "4        True\n",
+       "        ...  \n",
+       "4004     True\n",
+       "4005     True\n",
+       "4006     True\n",
+       "4007     True\n",
+       "4008    False\n",
+       "Name: accident, Length: 4009, dtype: bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df['accident'] is panda series this \"==\" one here is intercepted. And then this operation is being applied to all of the elements.\n",
+    "df['accident'] == \"None reported\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2        True\n",
+       "3        True\n",
+       "4        True\n",
+       "        ...  \n",
+       "4004     True\n",
+       "4005     True\n",
+       "4006     True\n",
+       "4007     True\n",
+       "4008    False\n",
+       "Name: accident, Length: 4009, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accident_free = df['accident'] == \"None reported\"\n",
+    "\n",
+    "accident_free"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,21 +280,14 @@
        "Name: accident, Length: 4009, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accident_free.astype(int)"
+    "accident_free.astype('int')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -226,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
