--- a/31 - Exercise Loan Approval/explore.ipynb
+++ b/31 - Exercise Loan Approval/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4            1        66135.0     MEDICAL                 0.53           586"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,12 +97,98 @@
     "\n",
     "df = pd.read_csv(\"data/loan_data.csv\")\n",
     "df = df[[\"loan_status\", \"person_income\", \"loan_intent\", \"loan_percent_income\", \"credit_score\"]]\n",
-    "df.head()"
+    "df.head()\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# df = pd.read_csv(\"data/loan_data.csv\")\n",
+    "# df = df[[\"loan_status\", \"person_income\", \"loan_intent\", \"loan_percent_income\", \"credit_score\"]]\n",
+    "# df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">person_income</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loan_status</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>86157.040743</td>\n",
+       "      <td>9595.0</td>\n",
+       "      <td>7200766.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59886.096900</td>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>845636.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            person_income                   \n",
+       "                     mean     min        max\n",
+       "loan_status                                 \n",
+       "0            86157.040743  9595.0  7200766.0\n",
+       "1            59886.096900  8000.0   845636.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"loan_status\").agg({\n",
+    "    \"person_income\": [\"mean\", \"min\", \"max\"]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +288,7 @@
        "1                      0.202521  0.0  0.62  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,12 +298,17 @@
     "    \"person_income\": [\"mean\", \"min\", \"max\"],\n",
     "    \"credit_score\": [\"mean\", \"min\", \"max\"],\n",
     "    \"loan_percent_income\": [\"mean\", \"min\", \"max\"]\n",
-    "})"
+    "})\n",
+    "# df.groupby(\"loan_status\").agg({\n",
+    "#     \"person_income\": [\"mean\", \"min\", \"max\"],\n",
+    "#     \"credit_score\": [\"mean\", \"min\", \"max\"],\n",
+    "#     \"loan_percent_income\": [\"mean\", \"min\", \"max\"]\n",
+    "# })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +388,7 @@
        "VENTURE              0.144264"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +396,10 @@
    "source": [
     "df.groupby(\"loan_intent\").agg({\n",
     "    \"loan_status\": [\"mean\"]\n",
-    "})"
+    "})\n",
+    "# df.groupby(\"loan_intent\").agg({\n",
+    "#     \"loan_status\": [\"mean\"]\n",
+    "# })"
    ]
   },
   {
@@ -318,9 +412,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (car-prices-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "car-prices-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
