--- a/03 - Car Prices/01pandas.ipynb
+++ b/03 - Car Prices/01pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4                           None reported         NaN  $34,999  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +179,13 @@
     }
    ],
    "source": [
-    "print(len(df))\n",
-    "print(df.shape)"
+    "print(len(df)) #number of lines in the data frame\n",
+    "print(df.shape) # in an IPython notebook always the last thing in a cell will be displayed directly. So I don't have to put a print around. However this only applies to the last line of a cell, otherwise we would need a print command around here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,18 +205,18 @@
        "Name: model, Length: 4009, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"model\"]"
+    "df[\"model\"] # dtype: object comes here because in case of string data pandas uses the object data type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "Name: model_year, Length: 4009, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,23 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<Axes: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -279,7 +272,7 @@
     }
    ],
    "source": [
-    "df[\"model_year\"].hist()"
+    "df[\"model_year\"].hist() # visualize the distribution of model years in our dataset"
    ]
   },
   {
@@ -322,20 +315,20 @@
      "output_type": "stream",
      "text": [
       "2015.515589922674\n",
-      "1974\n",
-      "2024\n"
+      "2024\n",
+      "1974\n"
      ]
     }
    ],
    "source": [
-    "print(df[\"model_year\"].mean())\n",
+    "print(df[\"model_year\"].mean()) # average model year of cars in our dataset\n",
     "print(df[\"model_year\"].max())\n",
     "print(df[\"model_year\"].min())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -380,13 +373,13 @@
     }
    ],
    "source": [
-    "price = df[\"price\"]\n",
+    "price = df[\"price\"] # when we are trying to analyze the data is that sometimes the data is not in the form that we need. For example, this price column here is not in the form that we can easily work with.\n",
     "price = price.str.replace(\"$\", \"\")\n",
     "price = price.str.replace(\",\", \"\")\n",
     "price = price.astype(int)\n",
     "price.hist()\n",
-    "print(price < 300000)\n",
-    "print(price[price < 300000])\n",
+    "print(price < 300000) # So here we are creating this series with true false values that just define whether they, um, whether this condition matches or not.\n",
+    "print(price[price < 300000]) #  all the values are taken, where there was a true here, but values are going to be ignored if there was a false here at this place.\n",
     "# price[price < 300000].hist()\n",
     "\n",
     "# price = price.str.replace(\"$\", \"\")\n",
