--- a/03 - Car Prices/02pandas2.ipynb
+++ b/03 - Car Prices/02pandas2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4                           None reported         NaN  $34,999  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "4                           None reported         NaN  34999  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,14 +323,14 @@
     "price = price.str.replace(\",\", \"\")\n",
     "price = price.astype(int)\n",
     "\n",
-    "df['price'] = price\n",
+    "df['price'] = price #price column replaced\n",
     "df.head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "np.float64(44553.190321776005)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -375,12 +375,12 @@
     }
    ],
    "source": [
-    "print(df['brand'] == 'Hyundai')\n",
+    "print(df['brand'] == 'Hyundai') # true false series for Hyundai brand\n",
     "\n",
-    "df_hyundai = df[df[\"brand\"] == \"Hyundai\"]\n",
+    "df_hyundai = df[df[\"brand\"] == \"Hyundai\"] # only Hyundai rows \n",
     "print(df_hyundai[\"price\"].mean())\n",
     "\n",
-    "df_ford = df[df['brand'] == 'Ford']\n",
+    "df_ford = df[df['brand'] == 'Ford'] # only Ford rows \n",
     "print(df_ford['price'].mean())"
    ]
   },
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "[4009 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1082,18 +1082,18 @@
        "price         0.199496  1.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[[\"model_year\", \"price\"]].corr()"
+    "df[[\"model_year\", \"price\"]].corr() # it's a measure between -1 and 1 that tells you how well a column describes another column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "price         0.866025  1.000000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
        "price         0.866025  1.000000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
        "price              1.0    1.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "price             -1.0    1.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "price              NaN    1.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
        "price         0.866025  1.000000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
