--- a/03 - Car Prices/11exercise.ipynb
+++ b/03 - Car Prices/11exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4                           None reported         NaN  $34,999  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "Name: accident, Length: 4009, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,9 +292,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (car-prices-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "car-prices-venv"
   },
   "language_info": {
    "codemirror_mode": {
