--- a/04 - Spam/01explore.ipynb
+++ b/04 - Spam/01explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +75,16 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro...  False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "#mby providing names parameter pandas will no longer treat the first line of the file as Names or labels for the columns, but it will use whatever provided here.\n",
+    "#  usually a CSV file in the first row it already, or it just contains the names of the columns that we got here, our file immediately starts with the data.\n",
+    "#by providing names parameter pandas will no longer treat the first line of the file as Names or labels for the columns, but it will use whatever provided here.\n",
+    "# And in that case, um, pandas will no longer treat the first line of the file as Names or labels for the columns, but it will use whatever I provide here.\n",
     "df = pd.read_csv('data/SMSSpamCollection', sep='\\t', names=['type', 'message'])\n",
     "df.head()\n",
     "df['spam'] = df['type'] == \"spam\"\n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +166,7 @@
     }
    ],
    "source": [
-    "df.iloc[0]"
+    "df.iloc[0] #iloc is used to access a row by its integer location"
    ]
   },
   {
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,7 @@
        "4  Nah I don't think he goes to usf, he lives aro...  False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +286,7 @@
     }
    ],
    "source": [
+    "# If we want to train a neuron here, it's best if our type here would not be like a string ham or spam, but just a number or a true false value.\n",
     "print(\"SPAM messages:\")\n",
     "print(len(df[df['spam'] == True]))"
    ]
@@ -317,9 +320,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (car-prices-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "car-prices-venv"
   },
   "language_info": {
    "codemirror_mode": {
