--- a/06 - Exercise Loan Approval/01explore.ipynb
+++ b/06 - Exercise Loan Approval/01explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4            1        66135.0     MEDICAL                 0.53           586"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,6 +400,87 @@
     "# df.groupby(\"loan_intent\").agg({\n",
     "#     \"loan_status\": [\"mean\"]\n",
     "# })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  loan_intent  personal_income\n",
+      "0    PERSONAL            30000\n",
+      "1   EDUCATION            50000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>personal_income</th>\n",
+       "      <th>loan_intent_EDUCATION</th>\n",
+       "      <th>loan_intent_PERSONAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   personal_income  loan_intent_EDUCATION  loan_intent_PERSONAL\n",
+       "0            30000                  False                  True\n",
+       "1            50000                   True                 False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I'm not reading the real data frame, but I'm creating a data frame from scratch.\n",
+    "df = pd.DataFrame({\n",
+    "    \"loan_intent\": [\"PERSONAL\", \"EDUCATION\"],\n",
+    "    \"personal_income\": [30000, 50000]\n",
+    "})\n",
+    "\n",
+    "print(df.head())\n",
+    "\n",
+    "df = pd.get_dummies(df, columns=[\"loan_intent\"])\n",
+    "df.head()"
    ]
   },
   {
